--- a/css/style.css
+++ b/css/style.css
@@ -327,11 +327,15 @@ header nav .log-join li:last-child::after{
      margin-bottom: 24px;
 }
 footer{
-     background-color: #a57dff;
+     
      color: #fff;
      width: 100%;
-     text-align: center;
      padding-bottom: 70px;
+}
+footer .wrapper{
+     width: 100%;
+     text-align: center;
+     background-color: #a57dff;
 }
 footer .title{
      font-family: 'Donuts & Cookies';
