--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ img{
 /* 리셋  끝  */
 
 header{
+     min-width: 300px;
      width: 100%;
      height: 50px;
      display: flex;
@@ -330,6 +331,7 @@ footer{
      background-color: #a57dff;
      color: #fff;
      width: 100%;
+     min-width: 300px;
      text-align: center;
      padding-bottom: 70px;
 }
