--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ header{
      align-items: center;
      background-color: #a57dff;
 }
+header .wrap{
+     width: 100%;
+}
 header .btn-nav, .btn-mem{
      width: 50px;
      height: 50px;
