--- a/css/style.css
+++ b/css/style.css
@@ -21,42 +21,40 @@ img{
 }
 /* 리셋  끝  */
 
-header{
-     
-}
+header{}
 header .wrap{
      min-width: 300px;
      height: 50px;
      display: flex;
+     justify-content: space-between;
      align-items: center;
      background-color: #a57dff;
 }
-header .btn-nav, .btn-mem{
+header .wrap .btn-nav, .btn-mem{
      width: 50px;
      height: 50px;
 }
-header h1 a .m{
+header .wrap h1 a .m{
      width: 63px;
      height: 37px;
 }
-header h1{
+header .wrap h1{
      position: absolute;
      left: 50%;
      transform: translateX(-50%);
 }
-header h1 a .pc{
+header .wrap h1 a .pc{
      display: none;
 }
-header .btn-mem{
-     margin-left: auto;
+header .wrap .btn-mem{
      display: flex;
      justify-content: center;
 }
-header .btn-mem button img{
+header .wrap .btn-mem button img{
      width: 16px;
      height: 19px;
 }
-header .btn-nav button{
+header .wrap .btn-nav button{
      font-size: 0;
      display: flex;
      flex-direction: column;
@@ -67,9 +65,9 @@ header .btn-nav button{
      align-items: center;
      
 }
-header .btn-nav button::before,
-header .btn-nav button span,
-header .btn-nav button::after{
+header .wrap .btn-nav button::before,
+header .wrap .btn-nav button span,
+header .wrap .btn-nav button::after{
      content: '';
      display: block;
      width: 26px;
@@ -77,7 +75,7 @@ header .btn-nav button::after{
      background-color: #fff;
      border-radius: 4px;
 }
-header nav{
+header .wrap nav{
      position: fixed;
      top: 0;
      left: -100%;
@@ -87,17 +85,17 @@ header nav{
      transition: all 0.3s;
      z-index: 1;
 }
-header nav .btn-close{
+header .wrap nav .btn-close{
      width: 100%;
      height: 50px;
      display: flex;
 }
-header nav .btn-close button{
+header .wrap nav .btn-close button{
      font-size: 0;
      margin-left: auto;
      padding-right: 12px;
 }
-header nav .btn-close button::before{
+header .wrap nav .btn-close button::before{
      content: '';
      display: block;
      background-color: #fff;
@@ -106,7 +104,7 @@ header nav .btn-close button::before{
      transform: translateY(1px) rotate(45deg);
      border-radius: 4px;
 }
-header nav .btn-close button::after{
+header .wrap nav .btn-close button::after{
      content: '';
      display: block;
      background-color: #fff;
@@ -115,15 +113,15 @@ header nav .btn-close button::after{
      transform: translateY(-1px) rotate(-45deg);
      border-radius: 4px;
 }
-header nav .gnb li{
+header .wrap nav .gnb li{
      padding: 5px 20px;
 }
-header nav .gnb li a{
+header .wrap nav .gnb li a{
      font-size: 30px;
      color: #fff;
      font-weight: bolder;
 }
-header nav .log-join{
+header .wrap nav .log-join{
      display: flex;
      justify-content: center;
      color: #fff;
@@ -131,16 +129,16 @@ header nav .log-join{
      font-size: 20px;
      font-weight: 500;
 }
-header nav .log-join li{
+header .wrap nav .log-join li{
      display: flex;
 }
-header nav .log-join li::after{
+header .wrap nav .log-join li::after{
      content: '|';
      display: block;
      margin: 0 4px;
      
 }
-header nav .log-join li:last-child::after{
+header .wrap nav .log-join li:last-child::after{
      content: none;
 }
 .banner a .pc{
