--- a/css/style.css
+++ b/css/style.css
@@ -150,12 +150,12 @@ header .wrap nav .log-join li:last-child::after{
 }
 
 .wrapper{
-     padding: 0 20px;
+     min-width: 300px;
      margin: 0 auto;
 }
 .wrapper .section1{
      padding-top: 30px;
-     width: 100%;
+     padding: 20px;
      text-align: center;
      margin-bottom: 50px;
 }
